--- a/01 python.ipynb
+++ b/01 python.ipynb
@@ -1102,7 +1102,7 @@
    ],
    "source": [
     "# testデータの Age の欠損値を平均値に置き換える\n",
-    "test[\"Age\"] = test[\"Age\"].fillna(test[\"Age\"].mean())[12]\n",
+    "test[\"Age\"] = test[\"Age\"].fillna(test[\"Age\"].mean())\n",
     "test.head(6)"
    ]
   },
@@ -1267,7 +1267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 相関係数"
+    "### 相関係数の表示"
    ]
   },
   {
@@ -1563,7 +1563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = classifier(n_estimators = 100, random_state=42)"
+    "clf = classifier(n_estimators = 100, random_state=0)"
    ]
   },
   {
@@ -1780,13 +1780,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed Time(Python): 0.66 [s]\n"
+      "0.7730164527893066\n"
      ]
     }
    ],
    "source": [
     "elapsed_time = time.time() - start\n",
-    "print(\"Elapsed Time(Python): %.2f [s]\" % elapsed_time)"
+    "print(elapsed_time)"
    ]
   },
   {
