--- a/02 julia.ipynb
+++ b/02 julia.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: redefinition of constant RandomForestClassifier. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant accuracy_score. This may fail, cause incorrect answers, or produce other errors.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using CSV\n",
     "using FileIO, CSVFiles, DataFrames\n",
@@ -39,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2020-08-08T11:22:25.489"
+       "2020-08-08T16:35:02.641"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +92,7 @@
        "│ 6   │ 6           │ 0        │ 3      │ Moran, Mr. James                                    │ male   │ \u001b[90mmissing\u001b[39m  │ 0     │ 0     │ 330877           │ 8.4583  │        │ Q        │"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +113,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +159,7 @@
        "│ 6   │ 897         │ 3      │ Svensson, Mr. Johan Cervin                   │ male   │ 14.0     │ 0     │ 0     │ 7538    │ 9.225    │        │ S        │"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +180,7 @@
        "(418, 11)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +245,7 @@
        "│ 12  │ Embarked    │          │                     │         │ S                           │ 4       │          │ String                  │"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +301,7 @@
        "│ 11  │ Embarked    │          │ C                             │         │ S                                 │ 3       │          │ String                  │"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +340,7 @@
        "  \"Parch\"       => 0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +372,7 @@
        "  \"Parch\"       => 0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -427,20 +418,20 @@
        "│ 6   │ 7           │ 0        │ 1      │ McCarthy, Mr. Timothy J                             │ male   │ 54.0     │ 0     │ 0     │ 17463            │ 51.8625 │ E46    │ S        │"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# trainデータのAGE が 欠損値の列を除く\n",
+    "# trainデータの Age の欠損値のある行を除く\n",
     "train = train[ismissing.(train)[:, :\"Age\"] .== 0, :]\n",
     "head(train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -475,20 +466,20 @@
        "│ 6   │ 897         │ 3      │ Svensson, Mr. Johan Cervin                   │ male   │ 14.0     │ 0     │ 0     │ 7538    │ 9.225    │        │ S        │"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# testデータのAgeの欠損値を平均値に置き換える\n",
+    "# testデータの Age の欠損値を平均値に置き換える\n",
     "test[:, :Age] = coalesce.(test[:, :Age], mean(test[ismissing.(test)[:, :Age] .== 0, :][:, :Age]))\n",
     "head(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +514,7 @@
        "│ 6   │ 897         │ 3      │ Svensson, Mr. Johan Cervin                   │ male   │ 14.0     │ 0     │ 0     │ 7538    │ 9.225    │        │ S        │"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,12 +529,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 相関係数"
+    "### 相関係数の表示"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -559,13 +550,13 @@
        "  0.2681886168744784"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[cor(train[:, i], train[:, \"Survived\"]) for i in [1, 2, 3, 6, 7, 8, 10]]"
+    "[cor(train[:, i], train[:, \"Survived\"]) for i in [\"PassengerId\", \"Survived\", \"Pclass\", \"Age\", \"SibSp\", \"Parch\", \"Fare\"]]"
    ]
   },
   {
@@ -577,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +583,7 @@
        " 1.0  54.0  0.0  0.0  51.8625"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +610,7 @@
        " 0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +637,7 @@
        " 3.0  14.0  0.0  0.0   9.225"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,11 +656,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=0, stratify=y);"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=0);"
    ]
   },
   {
@@ -681,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -690,18 +681,18 @@
        "PyObject RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "forest = RandomForestClassifier(n_estimators=100, random_state=42)"
+    "forest = RandomForestClassifier(n_estimators=100, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +701,7 @@
        "PyObject RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +727,7 @@
        " 1"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +755,7 @@
        "0.6976744186046512"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +788,7 @@
        " 0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +835,7 @@
        "│ 6   │ 897         │ 0        │"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +864,7 @@
        "\"submission.csv\""
       ]
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,22 +882,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "368 milliseconds"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30270 milliseconds\n"
+     ]
     }
    ],
    "source": [
-    "Dates.now() - start"
+    "elapsed_time = Dates.now() - start\n",
+    "println(elapsed_time)"
    ]
   }
  ],
